fixed: button coloring white on white background resulting in invisible

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,6 @@ p{
 	border-radius: 3px;
 	text-align: center;
 	margin-right: 10px;
-	color: white;
 }
 
 body div .button, 
